--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/AlexisPavon010/CalculadoraJs/issues"
   },
-  "homepage": "https://alexispavon010.github.io/CalculadoraJs/"
+  "homepage": "https://alexispavon010.github.io/CalculadoraJs/index.html"
 }
